# FastAPI-

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
.github/workflows/: unpack-zip.yml
alembic/: env.py
alembic/versions/: 0001_init.py
app/: main.py
app/api/: deps.py  router.py
app/api/v1/: dashboard.py  pdm.py  pipelines.py  products.py  scripts.py
app/core/: config.py  logging.py  security.py
app/db/: session.py
app/db/models/: execution_history.py  execution_step.py  product.py
app/db/repositories/: execution_repo.py  product_repo.py
app/schemas/: execution.py  pdm.py  pipeline.py  product.py  scripts.py
app/services/: azure_pipelines.py  github_scripts.py  pdm_client.py  scheduler.py  tasks.py
app/workers/: runner.py
sql/: init_database.sql
tests/: test_scripts_api.py
