[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true

[project]
name = "fastapi-pdm-azure-github"
version = "0.1.0"
description = "Production-ready FastAPI service with GitHub script listing, Azure Pipelines orchestration, and JSONB-first Postgres."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.0.3",
  "httpx>=0.27.0",
  "anyio>=4.0.0",
  "python-multipart>=0.0.6",
  "starlette>=0.37.0",
  "asyncpg>=0.29.0",
  "SQLAlchemy>=2.0.30",
  "alembic>=1.13.2",
  "apscheduler>=3.10.4",
  "orjson>=3.10.0",
  "uvicorn[standard]>=0.30.0",
  "python-json-logger>=2.0.7",
  "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.6",
  "httpx[http2]>=0.27.0",
  "respx>=0.21.1",
  "ruff>=0.6.0",
  "black>=24.8.0",
  "mypy>=1.11.0",
  "pre-commit>=3.8.0"
]
